adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: 'adminer'
          ports:
            - name: http-9000
              protocol: TCP
              containerPort: 9000
