postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-prod
  labels:
    app: postgres-prod
spec:
  replicas: 1
  template:
    metadata:
      name: postgres-prod
      labels:
        app: postgres-prod
    spec:
      containers:
        - name: db
          image: 'postgres:14.2-alpine'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
              name: tcp-5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-prod-data
              readOnly: false
              subPath: pgdata # important
            - mountPath: /docker-entrypoint-initdb.d
              name: wikijs-postgres-init
              readOnly: true
      volumes:
        - name: postgres-prod-data
          persistentVolumeClaim:
            claimName: postgres-prod-data
        - name: wikijs-postgres-init
          configMap:
            name: wikijs-postgres-init
      restartPolicy: Always
  selector:
    matchLabels:
      app: postgres-prod
