postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-prod
  namespace: wiki
spec:
  selector:
    app: postgres-prod
  ports:
    - port: 5432
      targetPort: tcp-5432
  type: NodePort
