wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki
spec:
  selector:
    app: wikijs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http-3000
  type: LoadBalancer
